k8sw7/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gossip-statefulset
spec:
  serviceName: "bcgossip-svc"
  replicas: 10  # Start with 2 replicas for testing
  selector:
    matchLabels:
      app: bcgossip
  template:
    metadata:
      labels:
        app: bcgossip
#      annotations:
#        kubernetes.io/ingress-bandwidth: 1M    # Limit the inbound bandwidth of the pod.
#        kubernetes.io/egress-bandwidth: 1M
    spec:
      containers:
        - name: gossip-node
          image: wwiras/gpbc10:v1  # Replace with your Docker image name
          ports:
            - containerPort: 5050
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
